[tool.poetry]
name = "project-formatter"
version = "0.1.0"
description = "A tool to format a project directory into a structured string."
authors = ["Aron Wiederkehr <aron.wiederkehr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
